# ow-challenge

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: app.py  processing_pandas.py  processing_pytorch.py
tests/: compare_performance.py  test_app.py  test_calculations.py
