[project]
name = "ow-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pandas>=2.2.3",
    "pytest>=8.3.3",
    "numpy<2.0.0",
    "fastapi>=0.115.5",
    "pydantic>=2.10.1",
    "requests>=2.32.3",
    "httpx>=0.27.2",
]
